gc logging.